Implementando Classes de repositorio

--- a/PersonalBox/PersonalBox.Application/PersonalBox.Application.csproj
+++ b/PersonalBox/PersonalBox.Application/PersonalBox.Application.csproj
@@ -30,6 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Appications\Abstracts\IAppBase.cs" />
+    <Compile Include="Appications\AppBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -41,6 +43,9 @@
       <Project>{c8f174b6-8508-4d4a-9f59-0d3528c5c5b2}</Project>
       <Name>PersonalBox.Infra</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
