--- a/PersonalBox/PersonalBox.Domain/PersonalBox.Domain.csproj
+++ b/PersonalBox/PersonalBox.Domain/PersonalBox.Domain.csproj
@@ -30,13 +30,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\Clients\IClientClient.cs" />
+    <Compile Include="Interfaces\Clients\ITransacaoFincanceiraClient.cs" />
+    <Compile Include="Clients\Clients\ClientClient.cs" />
+    <Compile Include="Clients\TransacaoFinanceiras\TransacaoFincanceiraClient.cs" />
     <Compile Include="Entities\Client.cs" />
+    <Compile Include="Interfaces\Repositories\IClientRepository.cs" />
     <Compile Include="Interfaces\Repositories\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ReturnOperation.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Clients\Abstracts\" />
     <Folder Include="Interfaces\Services\" />
     <Folder Include="Services\" />
   </ItemGroup>
