--- a/PersonalBox/PersonalBox.Domain/PersonalBox.Domain.csproj
+++ b/PersonalBox/PersonalBox.Domain/PersonalBox.Domain.csproj
@@ -30,20 +30,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Interfaces\Clients\IClientClient.cs" />
+    <Compile Include="AppServices\UserAppService.cs" />
+    <Compile Include="Interfaces\AppServices\IAppService.cs" />
+    <Compile Include="Interfaces\AppServices\IUserAppService.cs" />
+    <Compile Include="Interfaces\Clients\IUserClient.cs" />
     <Compile Include="Interfaces\Clients\ITransacaoFincanceiraClient.cs" />
-    <Compile Include="Clients\Clients\ClientClient.cs" />
+    <Compile Include="Clients\Users\UserClient.cs" />
     <Compile Include="Clients\TransacaoFinanceiras\TransacaoFincanceiraClient.cs" />
-    <Compile Include="Entities\Client.cs" />
-    <Compile Include="Interfaces\Repositories\IClientRepository.cs" />
+    <Compile Include="Entities\User.cs" />
+    <Compile Include="Interfaces\Repositories\IUserRepository.cs" />
     <Compile Include="Interfaces\Repositories\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AppServices\AppService.cs" />
     <Compile Include="Utils\ReturnOperation.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Interfaces\Services\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
