--- a/PersonalBox/PersonalBox.MVC/PersonalBox.MVC.csproj
+++ b/PersonalBox/PersonalBox.MVC/PersonalBox.MVC.csproj
@@ -212,7 +212,9 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Abstracts\IUserService.cs" />
     <Compile Include="Services\Abstracts\ITransacaoFianceiraService.cs" />
+    <Compile Include="Services\Clients\ClientService.cs" />
     <Compile Include="Services\TransacaoFinanceiras\TransacaoFianceiraService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utils\MessageUtil.cs" />
